tests/NormalTests/paczka1/small_fuzzy/88399671.err
Error in line 12: LREqeC S34i 59,5
Error in line 13: 4uiou0O A635 5,68
